--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <!--1-->
     <main>
-      <section class="main-page">
+      <section class="main-page herobg">
         <div class="container">
           <h1 class="hero-text">Effective Solutions <br />Your Business</h1>
           <div class="flex-btn">
