--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </header>
     <!--1-->
     <main>
-      <section class="main-page herobg">
+      <section class="main-page">
         <div class="container">
-          <h1 class="hero-text">Effective Solutions <br />Your Business</h1>
+          <h1 class="hero-text">Effective Solutions Your Business</h1>
           <div class="flex-btn">
             <button class="button-order" type="button">Order Service</button>
           </div>
