--- a/index.html
+++ b/index.html
@@ -144,6 +144,20 @@
           </ul>
         </div>
       </section>
+      <!--5-->
+      <section class="aside">
+        <div>
+          <h2 class="heading"> Customers </h2>
+          <ul class="list">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="end">
       <div class="container">
@@ -151,11 +165,13 @@
           <a class="logoweb link logotype" href="./index.html"
             >Web<span class="logo_end">Studio</span></a
           >
+
+          <p class="text-end">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
         </div>
-        <p class="text-end">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+        <p class="social-titel">Social media</p>
       </div>
     </footer>
   </body>
