--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
           <!--photo-->
           <ul class="list features">
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/bankingapp1.jpg"
                   alt="Додаток Банка"
@@ -72,7 +72,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/Cashless2.jpg"
                   alt="Платіжна система"
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img src="./images/apps/App3.jpg" alt="Комп і телефон" width="360" height="300" />
                 <div class="apps">
                   <h2 class="section-two">Meditation App</h2>
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/TaxiService4.jpg"
                   alt="кермо машини та навігатор"
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/screen5.jpg"
                   alt="дизайн фону на смартфоні"
@@ -123,7 +123,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/online6.jpg"
                   alt="дівчина з телефоном в руках"
@@ -137,7 +137,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/inst7.jpg"
                   alt="інтерфейс додатка"
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img
                   src="./images/apps/food8.jpg"
                   alt="жінка із кульоком фруктів"
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="features-list">
-              <a class="link" href="">
+              <a class="link image" href="">
                 <img src="./images/apps/coff9.jpg" alt="капучіно" width="360" height="300" />
                 <div class="apps">
                   <h2 class="section-two">Fresh Coffee</h2>
