--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </section>
       <!--5-->
       <section class="aside">
-        <div>
+        <div class="container">
           <h2 class="heading"> Customers </h2>
           <ul class="list">
             <li></li>
