--- a/index.html
+++ b/index.html
@@ -148,20 +148,20 @@
       <section class="aside">
         <div class="container">
           <h2 class="heading"> Customers </h2>
-          <ul class="list">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="list list-items">
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items"> <a class="link-items" href=""></a> </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="end">
-      <div class="container">
-        <div class="end-margin">
+      <div class="container end-margin">
+        <div class="logo-p">
           <a class="logoweb link logotype" href="./index.html"
             >Web<span class="logo_end">Studio</span></a
           >
@@ -171,7 +171,9 @@
             growth solutions.
           </p>
         </div>
-        <p class="social-titel">Social media</p>
+        <div>
+          <p class="social-titel">Social media</p>
+        </div>
       </div>
     </footer>
   </body>
