--- a/index.html
+++ b/index.html
@@ -115,9 +115,15 @@
           <ul class="list staff">
             <li class="back">
               <img src="./images/humans/mark.jpg" alt="Mark" width="264" />
-              <div class="row">
+              <div class="row ellipse">
                 <h3 class="names optinal-row">Mark Guerrero</h3>
                 <p class="text last-row">Product Designer</p>
+                <ul class="list social-link">
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="back">
@@ -125,6 +131,12 @@
               <div class="row">
                 <h3 class="names optinal-row">Tom Ford</h3>
                 <p class="text last-row">Frontend Developer</p>
+                <ul class="list social-link">
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="back">
@@ -132,6 +144,12 @@
               <div class="row">
                 <h3 class="names optinal-row">Camila Garcia</h3>
                 <p class="text last-row">Marketing</p>
+                <ul class="list social-link">
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="back">
@@ -139,6 +157,12 @@
               <div class="row">
                 <h3 class="names optinal-row">Daniel Wilson</h3>
                 <p class="text last-row">UI Designer</p>
+                <ul class="list social-link">
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -147,7 +171,7 @@
       <!--5-->
       <section class="aside">
         <div class="container">
-          <h2 class="heading"> Customers </h2>
+          <h2 class="heading">Customers</h2>
           <ul class="list list-items">
             <li class="menu-items"> <a class="link-items" href=""></a> </li>
             <li class="menu-items"> <a class="link-items" href=""></a> </li>
