--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@
         </div>
         <div>
           <p class="social-titel">Social media</p>
-        </div>
+          <ul class="list link-footer">
+            <li class="icons-blu"><a class="link-icon" href=""></a></li>
+            <li class="icons-blu"><a class="link-icon" href=""></a></li>
+            <li class="icons-blu"><a class="link-icon" href=""></a></li>
+            <li class="icons-blu"><a class="link-icon" href=""></a></li> </ul
+        ></div>
       </div>
     </footer>
   </body>
