--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
           <h2 class="advantages" hidden>Our Advantages</h2>
           <ul class="list primary-desc">
             <li class="desc">
+              <div class="banners"></div>
+
               <h3 class="section-two">Strategy</h3>
 
               <p class="text">
@@ -66,7 +68,9 @@
                 creative solution.
               </p>
             </li>
+
             <li class="desc">
+              <div class="banners"></div>
               <h3 class="section-two">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -74,6 +78,7 @@
               </p>
             </li>
             <li class="desc">
+              <div class="banners"></div>
               <h3 class="section-two">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -81,6 +86,7 @@
               </p>
             </li>
             <li class="desc">
+              <div class="banners"></div>
               <h3 class="section-two">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
