--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           <h2 class="advantages" hidden>Our Advantages</h2>
           <ul class="list primary-desc">
             <li class="desc">
-              <div class="banners"></div>
+              <div class="banners">
+                <svg class="secondary-icons" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
 
               <h3 class="section-two">Strategy</h3>
 
@@ -70,7 +74,11 @@
             </li>
 
             <li class="desc">
-              <div class="banners"></div>
+              <div class="banners">
+                <svg class="secondary-icons" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="section-two">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -78,7 +86,11 @@
               </p>
             </li>
             <li class="desc">
-              <div class="banners"></div>
+              <div class="banners">
+                <svg class="secondary-icons" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-two">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -86,7 +98,11 @@
               </p>
             </li>
             <li class="desc">
-              <div class="banners"></div>
+              <div class="banners">
+                <svg class="secondary-icons" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-two">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -125,10 +141,26 @@
                 <h3 class="names optinal-row">Mark Guerrero</h3>
                 <p class="text last-row">Product Designer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg></a
+                  ></li>
                 </ul>
               </div>
             </li>
@@ -138,10 +170,26 @@
                 <h3 class="names optinal-row">Tom Ford</h3>
                 <p class="text last-row">Frontend Developer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg></a
+                  ></li>
                 </ul>
               </div>
             </li>
@@ -151,10 +199,26 @@
                 <h3 class="names optinal-row">Camila Garcia</h3>
                 <p class="text last-row">Marketing</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg></a
+                  ></li>
                 </ul>
               </div>
             </li>
@@ -164,10 +228,26 @@
                 <h3 class="names optinal-row">Daniel Wilson</h3>
                 <p class="text last-row">UI Designer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
-                  <li class="icons-blu"><a class="link-icon" href=""></a></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg></a
+                  ></li>
+                  <li class="icons-blu"
+                    ><a class="link-icon" href=""
+                      ><svg class="social-icons" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg></a
+                  ></li>
                 </ul>
               </div>
             </li>
@@ -179,12 +259,48 @@
         <div class="container">
           <h2 class="heading">Customers</h2>
           <ul class="list list-items">
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
-            <li class="menu-items"> <a class="link-items" href=""></a> </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-items">
+              <a class="link-items" href="">
+                <svg class="logo-brand" width="" height="">
+                  <use href="./images/icons.svg#Logo5"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -204,10 +320,26 @@
         <div>
           <p class="social-titel">Social media</p>
           <ul class="list link-footer">
-            <li class="icons-blu"><a class="link-icon" href=""></a></li>
-            <li class="icons-blu"><a class="link-icon" href=""></a></li>
-            <li class="icons-blu"><a class="link-icon" href=""></a></li>
-            <li class="icons-blu"><a class="link-icon" href=""></a></li> </ul
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use></svg></a
+            ></li> </ul
         ></div>
       </div>
     </footer>
