--- a/portfolio.html
+++ b/portfolio.html
@@ -178,12 +178,41 @@
       </section>
     </main>
     <footer class="end">
-      <div class="container">
-        <a class="logoweb link" href="./index.html">Web<span class="logo_end">Studio</span></a>
-        <p class="text-end">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container end-margin">
+        <div class="logo-p">
+          <a class="logoweb link logotype" href="./index.html"
+            >Web<span class="logo_end">Studio</span></a
+          >
+
+          <p class="text-end">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="social-titel">Social media</p>
+          <ul class="list link-footer">
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use></svg></a
+            ></li>
+            <li class="icons-blu"
+              ><a class="link-icon" href=""
+                ><svg class="social-icons" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use></svg></a
+            ></li> </ul
+        ></div>
       </div>
     </footer>
   </body>
