--- a/index.html
+++ b/index.html
@@ -141,26 +141,28 @@
                 <h3 class="names optinal-row">Mark Guerrero</h3>
                 <p class="text last-row">Product Designer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use></svg></a
-                  ></li>
+                  <div class="social-icon">
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin"></use></svg></a
+                    ></li>
+                  </div>
                 </ul>
               </div>
             </li>
@@ -170,26 +172,28 @@
                 <h3 class="names optinal-row">Tom Ford</h3>
                 <p class="text last-row">Frontend Developer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use></svg></a
-                  ></li>
+                  <div class="social-icon">
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin"></use></svg></a
+                    ></li>
+                  </div>
                 </ul>
               </div>
             </li>
@@ -199,26 +203,28 @@
                 <h3 class="names optinal-row">Camila Garcia</h3>
                 <p class="text last-row">Marketing</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use></svg></a
-                  ></li>
+                  <div class="social-icon">
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin"></use></svg></a
+                    ></li>
+                  </div>
                 </ul>
               </div>
             </li>
@@ -228,26 +234,28 @@
                 <h3 class="names optinal-row">Daniel Wilson</h3>
                 <p class="text last-row">UI Designer</p>
                 <ul class="list social-link">
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use></svg></a
-                  ></li>
-                  <li class="icons-blu"
-                    ><a class="link-icon" href=""
-                      ><svg class="social-icons" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use></svg></a
-                  ></li>
+                  <div class="social-icon">
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#instagram"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#twitter"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#facebook"></use></svg></a
+                    ></li>
+                    <li class="icons-blu"
+                      ><a class="link-icon" href=""
+                        ><svg class="social-icons" width="16" height="16">
+                          <use href="./images/icons.svg#linkedin"></use></svg></a
+                    ></li>
+                  </div>
                 </ul>
               </div>
             </li>
@@ -261,42 +269,42 @@
           <ul class="list list-items">
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-items">
               <a class="link-items" href="">
-                <svg class="logo-brand" width="" height="">
+                <svg class="logo-brand" width="104" height="56">
                   <use href="./images/icons.svg#Logo5"></use>
                 </svg>
               </a>
@@ -320,24 +328,24 @@
         <div>
           <p class="social-titel">Social media</p>
           <ul class="list link-footer">
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use></svg></a
             ></li> </ul
         ></div>
