--- a/portfolio.html
+++ b/portfolio.html
@@ -192,24 +192,24 @@
         <div>
           <p class="social-titel">Social media</p>
           <ul class="list link-footer">
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use></svg></a
             ></li>
-            <li class="icons-blu"
-              ><a class="link-icon" href=""
-                ><svg class="social-icons" width="16" height="16">
+            <li class="icons-blu-footer"
+              ><a class="link-icon-footer" href=""
+                ><svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use></svg></a
             ></li> </ul
         ></div>
