--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </li>
             <li class="back">
               <img src="./images/humans/tom.jpg" alt="Tom" width="264" />
-              <div class="row">
+              <div class="row ellipse">
                 <h3 class="names optinal-row">Tom Ford</h3>
                 <p class="text last-row">Frontend Developer</p>
                 <ul class="list social-link">
@@ -195,7 +195,7 @@
             </li>
             <li class="back">
               <img src="./images/humans/camila.jpg" alt="Camila" width="264" />
-              <div class="row">
+              <div class="row ellipse">
                 <h3 class="names optinal-row">Camila Garcia</h3>
                 <p class="text last-row">Marketing</p>
                 <ul class="list social-link">
@@ -224,7 +224,7 @@
             </li>
             <li class="back">
               <img src="./images/humans/daniel.jpg" alt="daniel" width="264" />
-              <div class="row">
+              <div class="row ellipse">
                 <h3 class="names optinal-row">Daniel Wilson</h3>
                 <p class="text last-row">UI Designer</p>
                 <ul class="list social-link">
